fix mix-blend on dark mode

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,9 +5,10 @@
     backdrop-filter: blur(2px);
     position:sticky;
     top:0;
-    z-index: 10;
+    z-index: 5;
     color:var(--clr-primary);
     mix-blend-mode: difference;
+  
 
     &__name {
         font-weight: 600;
@@ -22,3 +23,5 @@
         }
     }
 }
+
+
